--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,23 @@
         </label>
         <input type="submit" name='submit_cam' class='button_url' value='Apply'>
       </form>
+
+      <form action="{{ url_for('form_classes') }}" align=center method="POST" class='form_class'>
+        <p class='form_classes_header'>Supported classes</p>
+        <input type="submit" name='button_classes' class='button_classes' value='Bicycling'>
+        <input type="submit" name='button_classes' class='button_classes' value='Cooking'>
+        <input type="submit" name='button_classes' class='button_classes' value='Crying'>
+        <input type="submit" name='button_classes' class='button_classes' value='Dancing'>
+        <input type="submit" name='button_classes' class='button_classes' value='Drawing'>
+        <input type="submit" name='button_classes' class='button_classes' value='Drinking'>
+        <input type="submit" name='button_classes' class='button_classes' value='Eating'>
+        <input type="submit" name='button_classes' class='button_classes' value='Exercising'>
+        <input type="submit" name='button_classes' class='button_classes' value='Jumping'>
+        <input type="submit" name='button_classes' class='button_classes' value='Walking'>
+
+      </form>
+
+
     </div>
   </body>
 </html>
